master campatin & sub campaign manager

--- a/MRM/Views/MasterCampaign/CampaignList.cshtml
+++ b/MRM/Views/MasterCampaign/CampaignList.cshtml
@@ -16,7 +16,7 @@
             <fieldset>
                 <legend class="header-color">Master Campaign Details</legend>
                 <div class="table-responsive">
-                    <table id="masterCampaignGrid" class="display compact table table-striped table-bordered table-hover dataTable" style="font-size:inherit;" role="grid"></table>
+                    <table id="masterCampaignGrid" class="display compact table table-striped table-bordered table-hover dataTable" style="font-size:inherit;text-wrap:avoid" role="grid"></table>
                 </div>
                 <div class="row">
                     <div class="col-md-10"></div>
