--- a/MRM/Views/ChildCampaign/ChildCampaignForm.cshtml
+++ b/MRM/Views/ChildCampaign/ChildCampaignForm.cshtml
@@ -54,7 +54,7 @@
                                     @Html.TextBoxFor(m => m.CampaignManager,
                                   (Model.Id != 0 && Model.Status == "Complete") ?
                                             (object)new { disabled = "disabled", @class = "form-control" } :
-                                            (object)new { @class = "form-control", @maxlength = "200" }
+                                            (object)new { @class = "form-control", @maxlength = "200", @placeholder = "user@nokia.com" }
                                    )
                                     <div class="validmsgSubCampmanager HideOnsave"></div>
                                 </div>
