--- a/MRM/Views/TacticCampaign/TacticCampaignForm.cshtml
+++ b/MRM/Views/TacticCampaign/TacticCampaignForm.cshtml
@@ -218,6 +218,9 @@
                                 </div>
                             </div>
                             <div class="col-md-6">
+                                <label></label><br />
+                                <button id="btnDigital" data-target="#myModal" data-toggle="modal" type="button" class="btn btn-sm btn-info">Digital Touchpoint</button>
+
                             </div>
                         </div>
 
@@ -398,4 +401,7 @@
             <!-- /.box-body -->
         </div>
     </section>
+    <div class="modal fade" id="myModal" role="dialog" style="width:100%!important">
+        @Html.Partial("tacticdigital")
+    </div>
 </form>
