--- a/MRM/Views/ChildCampaign/ChildCampaignForm.cshtml
+++ b/MRM/Views/ChildCampaign/ChildCampaignForm.cshtml
@@ -241,51 +241,64 @@
                                     <tbody>
                                         <tr>
                                             <td><label>MIL</label></td>
-                                            <td>@Html.TextBoxFor(m => m.MILGoal, (Model.Id != 0 && Model.Status == "Complete") ?
+                                            
+                                            <td>
+                                            @Html.TextBoxFor(m => m.MILGoal, (Model.Id != 0 && Model.Status == "Complete") ?
                                                     (object)new { disabled = "disabled", @class = "form-control", @maxlength = "50" } :
-                                                    (object)new { @class = "form-control", @maxlength = "50", onkeypress = "numericvalidate(event)" })</td>
-                                            <td>@Html.TextBoxFor(m => m.MILLow, (Model.Id != 0 && Model.Status == "Complete") ?
+                                                    (object)new { @class = "form-control", @maxlength = "50", onkeypress = "numericvalidate(event)", @placeholder = "Number of leads" })</td>
+                                            <td>
+                                            @Html.TextBoxFor(m => m.MILLow, (Model.Id != 0 && Model.Status == "Complete") ?
                                                     (object)new { disabled = "disabled", @class = "form-control", @maxlength = "50" } :
-                                                    (object)new { @class = "form-control", @maxlength = "50", onkeypress = "numericvalidate(event)" })</td>
-                                            <td>@Html.TextBoxFor(m => m.MILHigh, (Model.Id != 0 && Model.Status == "Complete") ?
+                                                    (object)new { @class = "form-control", @maxlength = "50", onkeypress = "numericvalidate(event)", @placeholder = "Number of leads" })</td>
+                                            <td>
+                                            @Html.TextBoxFor(m => m.MILHigh, (Model.Id != 0 && Model.Status == "Complete") ?
                                                     (object)new { disabled = "disabled", @class = "form-control", @maxlength = "50" } :
-                                                    (object)new { @class = "form-control", @maxlength = "50", onkeypress = "numericvalidate(event)" })</td>
+                                                    (object)new { @class = "form-control", @maxlength = "50", onkeypress = "numericvalidate(event)", @placeholder = "Number of leads" })</td>
                                         </tr>
                                         <tr>
                                             <td><label>MGL</label></td>
-                                            <td>@Html.TextBoxFor(m => m.MGLGoal, (Model.Id != 0 && Model.Status == "Complete") ?
+                                            <td>
+                                            @Html.TextBoxFor(m => m.MGLGoal, (Model.Id != 0 && Model.Status == "Complete") ?
                                                     (object)new { disabled = "disabled", @class = "form-control", @maxlength = "50" } :
-                                                    (object)new { @class = "form-control", @maxlength = "50", onkeypress = "numericvalidate(event)" })</td>
-                                            <td>@Html.TextBoxFor(m => m.MGLLow, (Model.Id != 0 && Model.Status == "Complete") ?
+                                                    (object)new { @class = "form-control", @maxlength = "50", onkeypress = "numericvalidate(event)", @placeholder = "Number of leads" })</td>
+                                            <td>
+                                            @Html.TextBoxFor(m => m.MGLLow, (Model.Id != 0 && Model.Status == "Complete") ?
                                                     (object)new { disabled = "disabled", @class = "form-control", @maxlength = "50" } :
-                                                    (object)new { @class = "form-control", @maxlength = "50", onkeypress = "numericvalidate(event)" }) </td>
-                                            <td>@Html.TextBoxFor(m => m.MGLHigh, (Model.Id != 0 && Model.Status == "Complete") ?
+                                                    (object)new { @class = "form-control", @maxlength = "50", onkeypress = "numericvalidate(event)", @placeholder = "Number of leads" }) </td>
+                                            <td>
+                                            @Html.TextBoxFor(m => m.MGLHigh, (Model.Id != 0 && Model.Status == "Complete") ?
                                                     (object)new { disabled = "disabled", @class = "form-control", @maxlength = "50" } :
-                                                    (object)new { @class = "form-control", @maxlength = "50", onkeypress = "numericvalidate(event)" })</td>
+                                                    (object)new { @class = "form-control", @maxlength = "50", onkeypress = "numericvalidate(event)", @placeholder = "Number of leads" })</td>
                                         </tr>
                                         <tr>
                                             <td><label>MIO</label></td>
-                                            <td>@Html.TextBoxFor(m => m.MIOGoal, (Model.Id != 0 && Model.Status == "Complete") ?
-                                                    (object)new { disabled = "disabled", @class = "form-control", @maxlength = "50" } :
-                                                    (object)new { @class = "form-control", @maxlength = "50", onkeypress = "numericvalidate(event)" })</td>
-                                            <td>@Html.TextBoxFor(m => m.MIOLow, (Model.Id != 0 && Model.Status == "Complete") ?
-                                                    (object)new { disabled = "disabled", @class = "form-control", @maxlength = "50" } :
-                                                    (object)new { @class = "form-control", @maxlength = "50", onkeypress = "numericvalidate(event)" }) </td>
-                                            <td>@Html.TextBoxFor(m => m.MIOHigh, (Model.Id != 0 && Model.Status == "Complete") ?
-                                                    (object)new { disabled = "disabled", @class = "form-control", @maxlength = "50" } :
-                                                    (object)new { @class = "form-control", @maxlength = "50", onkeypress = "numericvalidate(event)" })</td>
+                                            <td><span class="input-group-addon" style="width: 0px;height: 33px !important;">€</span>
+                                            @Html.TextBoxFor(m => m.MIOGoal, (Model.Id != 0 && Model.Status == "Complete") ?
+                                                    (object)new { disabled = "disabled", @class = "form-control benchmarkcurrency", @maxlength = "50" } :
+                                                    (object)new { @class = "form-control benchmarkcurrency", @maxlength = "50", onkeypress = "numericvalidate(event)" })</td>
+                                            <td><span class="input-group-addon" style="width: 0px;height: 33px !important;">€</span>
+                                            @Html.TextBoxFor(m => m.MIOLow, (Model.Id != 0 && Model.Status == "Complete") ?
+                                                    (object)new { disabled = "disabled", @class = "form-control benchmarkcurrency", @maxlength = "50" } :
+                                                    (object)new { @class = "form-control benchmarkcurrency", @maxlength = "50", onkeypress = "numericvalidate(event)" }) </td>
+                                            <td><span class="input-group-addon" style="width: 0px;height: 33px !important;">€</span>
+                                            @Html.TextBoxFor(m => m.MIOHigh, (Model.Id != 0 && Model.Status == "Complete") ?
+                                                    (object)new { disabled = "disabled", @class = "form-control benchmarkcurrency", @maxlength = "50" } :
+                                                    (object)new { @class = "form-control benchmarkcurrency", @maxlength = "50", onkeypress = "numericvalidate(event)" })</td>
                                         </tr>
                                         <tr>
                                             <td><label>MGO</label></td>
-                                            <td>@Html.TextBoxFor(m => m.MGOGoal, (Model.Id != 0 && Model.Status == "Complete") ?
-                                                    (object)new { disabled = "disabled", @class = "form-control", @maxlength = "50" } :
-                                                    (object)new { @class = "form-control", @maxlength = "50", onkeypress = "numericvalidate(event)" })</td>
-                                            <td>@Html.TextBoxFor(m => m.MGOLow, (Model.Id != 0 && Model.Status == "Complete") ?
-                                                    (object)new { disabled = "disabled", @class = "form-control", @maxlength = "50" } :
-                                                    (object)new { @class = "form-control", @maxlength = "50", onkeypress = "numericvalidate(event)" })</td>
-                                            <td>@Html.TextBoxFor(m => m.MGOHigh, (Model.Id != 0 && Model.Status == "Complete") ?
-                                                    (object)new { disabled = "disabled", @class = "form-control", @maxlength = "50" } :
-                                                    (object)new { @class = "form-control", @maxlength = "50", onkeypress = "numericvalidate(event)" })</td>
+                                            <td><span class="input-group-addon" style="width: 0px;height: 33px !important;">€</span>
+                                            @Html.TextBoxFor(m => m.MGOGoal, (Model.Id != 0 && Model.Status == "Complete") ?
+                                                    (object)new { disabled = "disabled", @class = "form-control benchmarkcurrency", @maxlength = "50" } :
+                                                    (object)new { @class = "form-control benchmarkcurrency", @maxlength = "50", onkeypress = "numericvalidate(event)" })</td>
+                                            <td><span class="input-group-addon" style="width: 0px;height: 33px !important;">€</span>
+                                            @Html.TextBoxFor(m => m.MGOLow, (Model.Id != 0 && Model.Status == "Complete") ?
+                                                    (object)new { disabled = "disabled", @class = "form-control benchmarkcurrency", @maxlength = "50" } :
+                                                    (object)new { @class = "form-control benchmarkcurrency", @maxlength = "50", onkeypress = "numericvalidate(event)" })</td>
+                                            <td><span class="input-group-addon" style="width: 0px;height: 33px !important;">€</span>
+                                            @Html.TextBoxFor(m => m.MGOHigh, (Model.Id != 0 && Model.Status == "Complete") ?
+                                                    (object)new { disabled = "disabled", @class = "form-control benchmarkcurrency", @maxlength = "50" } :
+                                                    (object)new { @class = "form-control benchmarkcurrency", @maxlength = "50", onkeypress = "numericvalidate(event)" })</td>
                                         </tr>
                                     </tbody>
                                 </table>
