--- a/MRM/Views/TacticCampaign/TacticCampaignForm.cshtml
+++ b/MRM/Views/TacticCampaign/TacticCampaignForm.cshtml
@@ -89,8 +89,9 @@
                             <div class="col-md-6" id="TDC">
                                 <div class="form-group">
                                     <label>Tactic Description & Goals<span class="text-danger">*</span></label>
-                                    @Html.TextAreaFor(m => m.TacticDescription, (Model.Id != 0 && Model.Status == "Complete") ?
-                                    (object)new { disabled = "disabled", @class = "form-control" } :
+                                    @Html.TextAreaFor(m => m.TacticDescription,
+                                    //(Model.Id != 0 && Model.Status == "Complete") ?
+                                    // (object)new { disabled = "disabled", @class = "form-control" } :
                                     (object)new { @class = "form-control", onkeypress = "return alpha(event,TacticDescription)", @maxlength = "500" })
                                     <div class="validmsgtacticdesc HideOnsave"></div>
                                 </div>
@@ -100,10 +101,10 @@
                             <div class="col-md-6">
                                 <div class="form-group">
                                     <label>Theme</label>  <br />
-                                    @Html.ListBoxFor(m => m.Themes_Id, new MultiSelectList(Model.ThemeViewModels, "Id", "Name", Model.Themes_Id), (Model.Id != 0 && Model.Status == "Complete") ?
-                                        (object)new { disabled = "disabled", @class = "chosen-select form-control" } :
+                                    @Html.ListBoxFor(m => m.Themes_Id, new MultiSelectList(Model.ThemeViewModels, "Id", "Name", Model.Themes_Id),
+                                        //(Model.Id != 0 && Model.Status == "Complete") ?
+                                        //    (object)new { disabled = "disabled", @class = "chosen-select form-control" } :
                                         (object)new { @class = "chosen-select form-control", onchange = "DDLSelectUnselect(this)" })
-                                    @*<a data-next-stage="select" data-target-id="Themes_Id" data-select-all="selectunselect" href="javascript:void(0);">Select All</a>*@
                                     <a data-next-stage="@(Model.ThemeSelectUnselect==false?"select":"unselect")" data-target-id="Themes_Id" data-select-all="selectunselect" href="javascript:void(0);"> @(Model.ThemeSelectUnselect == false ? "Select All" : "Select None")</a>
                                 </div>
                             </div>
@@ -123,13 +124,14 @@
                         <div class="row">
 
                             <div class="col-md-6" id="SD">
-                                <label>Start Date<span class="text-danger lb-sm"> (DD/MM/YYYY)*</span></label>
+                                <label>Start Date<span class="text-danger lb-sm"> (DD 3letter month YYYY)*</span></label>
                                 <div class="form-group">
                                     <div id="dvStartDate" class="col-md-6 date datealign">
                                         <div class="input-group input-append date">
-                                            @Html.TextBoxFor(m => m.StartDate, (Model.Id != 0 && Model.Status == "Complete") ?
-                                            (object)new { Value = (Model.StartDate != null ? Model.StartDate.Value.ToString("dd/MM/yyyy") : ""), disabled = "disabled", @class = "form-control start-date-cal", @maxlength = "10", @placeholder = "DD/MM/YYYY" } :
-                                            (object)new { Value = (Model.StartDate != null ? Model.StartDate.Value.ToString("dd/MM/yyyy") : ""), @class = "form-control start-date-cal", @maxlength = "10", @placeholder = "DD/MM/YYYY" })
+                                            @Html.TextBoxFor(m => m.StartDate,
+                                            //(Model.Id != 0 && Model.Status == "Complete") ?
+                                            // (object)new { Value = (Model.StartDate != null ? Model.StartDate.Value.ToString("dd MMM yyyy") : ""), disabled = "disabled", @class = "form-control start-date-cal", @maxlength = "10", @placeholder = "DD Month YYYY" } :
+                                            (object)new { Value = (Model.StartDate != null ? Model.StartDate.Value.ToString("dd MMM yyyy") : ""), @class = "form-control start-date-cal", @maxlength = "10", @placeholder = "DD Month YYYY" })
                                             <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar add-on startcal"></span></span>
                                         </div>
                                         <div class="validmsgSdate HideOnsave"></div>
@@ -138,13 +140,14 @@
                                 </div>
                             </div>
                             <div class="col-md-6" id="ED">
-                                <label>End Date<span class="text-danger lb-sm"> (DD/MM/YYYY)*</span></label>
+                                <label>End Date<span class="text-danger lb-sm"> (DD 3letter month YYYY)*</span></label>
                                 <div class="form-group">
                                     <div id="dvEndDate" class="col-md-6 form-group date datealign">
                                         <div class="input-group input-append date">
-                                            @Html.TextBoxFor(m => m.EndDate, (Model.Id != 0 && Model.Status == "Complete") ?
-                                            (object)new { Value = (Model.EndDate != null ? Model.EndDate.Value.ToString("dd/MM/yyyy") : ""), disabled = "disabled", @class = "form-control end-date-cal", @maxlength = "10", @placeholder = "DD/MM/YYYY" } :
-                                            (object)new { Value = (Model.EndDate != null ? Model.EndDate.Value.ToString("dd/MM/yyyy") : ""), @class = "form-control end-date-cal", @maxlength = "10", @placeholder = "DD/MM/YYYY" })
+                                            @Html.TextBoxFor(m => m.EndDate,
+                                            //(Model.Id != 0 && Model.Status == "Complete") ?
+                                            // (object)new { Value = (Model.EndDate != null ? Model.EndDate.Value.ToString("dd MMM yyyy") : ""), disabled = "disabled", @class = "form-control end-date-cal", @maxlength = "10", @placeholder = "DD Month YYYY" } :
+                                            (object)new { Value = (Model.EndDate != null ? Model.EndDate.Value.ToString("dd MMM yyyy") : ""), @class = "form-control end-date-cal", @maxlength = "10", @placeholder = "DD Month YYYY" })
                                             <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar add-on endcal"></span></span>
                                         </div>
                                         <div class="validmsgEdate HideOnsave"></div><div class="validmsgDatecompare"></div>
@@ -161,8 +164,9 @@
                             <div class="col-md-6" id="BG">
                                 <div class="form-group">
                                     <label>Business Group<span class="text-danger">*</span></label><br />
-                                    @Html.ListBoxFor(m => m.BusinessGroups_Id, new MultiSelectList(Model.BusinessGroupViewModels, "Id", "Name", Model.BusinessGroups_Id), (Model.Id != 0 && Model.Status == "Complete") ?
-                                        (object)new { disabled = "disabled", @class = "chosen-select form-control" } :
+                                    @Html.ListBoxFor(m => m.BusinessGroups_Id, new MultiSelectList(Model.BusinessGroupViewModels, "Id", "Name", Model.BusinessGroups_Id),
+                                        //(Model.Id != 0 && Model.Status == "Complete") ?
+                                        //     (object)new { disabled = "disabled", @class = "chosen-select form-control" } :
                                         (object)new { @class = "chosen-select form-control" })
                                     <a data-next-stage="@(Model.BgSelectUnselect==false?"bgselect":"bgunselect")" data-target-id="BusinessGroups_Id" data-select-all="BGselectunselect" href="javascript:void(0);"> @(Model.BgSelectUnselect == false ? "Select All" : "Select None")</a>
                                     <div class="validmsgbusinesGp HideOnsave"></div>
@@ -171,10 +175,10 @@
                             <div class="col-md-6" id="SG">
                                 <div class="form-group">
                                     <label>Segment</label><span class="text-danger">*</span><br />
-                                    @Html.ListBoxFor(m => m.Segments_Id, new MultiSelectList(Model.SegmentViewModels, "Id", "Name", Model.Segments_Id), (Model.Id != 0 && Model.Status == "Complete") ?
-                                        (object)new { disabled = "disabled", @class = "chosen-select form-control" } :
+                                    @Html.ListBoxFor(m => m.Segments_Id, new MultiSelectList(Model.SegmentViewModels, "Id", "Name", Model.Segments_Id),
+                                        //(Model.Id != 0 && Model.Status == "Complete") ?
+                                        //     (object)new { disabled = "disabled", @class = "chosen-select form-control" } :
                                         (object)new { @class = "chosen-select form-control" })
-                                    @*   <a data-next-stage="select" data-target-id="Segments_Id" data-select-all="selectunselect" href="javascript:void(0);">Select All</a>*@
                                     <a data-next-stage="@(Model.SegSelectUnselect==false?"Segselect":"Segunselect")" data-target-id="Segments_Id" data-select-all="Segselectunselect" href="javascript:void(0);"> @(Model.SegSelectUnselect == false ? "Select All" : "Select None")</a>
                                     <div class="validmsgbusinesSegment HideOnsave"></div>
                                 </div>
@@ -184,10 +188,10 @@
                             <div class="col-md-6" id="BL">
                                 <div class="form-group">
                                     <label>Business Line</label><span class="text-danger">*</span><br />
-                                    @Html.ListBoxFor(m => m.BusinessLines_Id, new MultiSelectList(Model.BusinessLineViewModels, "Id", "Name", Model.BusinessLines_Id), (Model.Id != 0 && Model.Status == "Complete") ?
-                                        (object)new { disabled = "disabled", @class = "chosen-select form-control" } :
+                                    @Html.ListBoxFor(m => m.BusinessLines_Id, new MultiSelectList(Model.BusinessLineViewModels, "Id", "Name", Model.BusinessLines_Id),
+                                        //(Model.Id != 0 && Model.Status == "Complete") ?
+                                        //     (object)new { disabled = "disabled", @class = "chosen-select form-control" } :
                                         (object)new { @class = "chosen-select form-control", onchange = "DDLSelectUnselect(this)" })
-                                    @*<a data-next-stage="select" data-target-id="BusinessLines_Id" data-select-all="selectunselect" href="javascript:void(0);">Select All</a>*@
                                     <a data-next-stage="@(Model.BlSelectUnselect==false?"select":"unselect")" data-target-id="BusinessLines_Id" data-select-all="selectunselect" href="javascript:void(0);"> @(Model.BlSelectUnselect == false ? "Select All" : "Select None")</a>
                                     <div class="validmsgbusinesLine HideOnsave"></div>
                                 </div>
@@ -195,10 +199,10 @@
                             <div class="col-md-6" id="Ind">
                                 <div class="form-group">
                                     <label>Industry</label><span class="text-danger Industrymanage-mandate">*</span><br />
-                                    @Html.ListBoxFor(m => m.Industries_Id, new MultiSelectList(Model.IndustryViewModels, "Id", "Name", Model.Industries_Id), (Model.Id != 0 && Model.Status == "Complete") ?
-                                        (object)new { disabled = "disabled", @class = "chosen-select form-control" } :
+                                    @Html.ListBoxFor(m => m.Industries_Id, new MultiSelectList(Model.IndustryViewModels, "Id", "Name", Model.Industries_Id),
+                                        //(Model.Id != 0 && Model.Status == "Complete") ?
+                                        //     (object)new { disabled = "disabled", @class = "chosen-select form-control" } :
                                         (object)new { @class = "chosen-select form-control", onchange = "DDLSelectUnselect(this)" })
-                                    @*<a data-next-stage="select" data-target-id="Industries_Id" data-select-all="selectunselect" href="javascript:void(0);">Select All</a>*@
                                     <a data-next-stage="@(Model.IndustrySelectUnselect==false?"select":"unselect")" data-target-id="Industries_Id" data-select-all="selectunselect" href="javascript:void(0);"> @(Model.IndustrySelectUnselect == false ? "Select All" : "Select None")</a>
                                     <div class="validmsgbusinesIndustry HideOnsave"></div>
                                 </div>
@@ -208,8 +212,9 @@
                             <div class="col-md-6" id="Vndr">
                                 <div class="form-group">
                                     <label>Vendor</label><span class="text-danger"></span><br />
-                                    @Html.TextBoxFor(m => m.Vendor, (Model.Id != 0 && Model.Status == "Complete") ?
-                                    (object)new { disabled = "disabled", @class = "form-control" } :
+                                    @Html.TextBoxFor(m => m.Vendor,
+                                    //(Model.Id != 0 && Model.Status == "Complete") ?
+                                    // (object)new { disabled = "disabled", @class = "form-control" } :
                                     (object)new { @class = "form-control", @maxlength = "50", onkeypress = "return blockSpecialChar(event)" })
                                     @*@Html.ListBoxFor(m => m.Vendor_Id, new MultiSelectList(Model.VendorViewModels, "Id", "Name", Model.Vendor_Id), (Model.Id != 0 && Model.Status == "Complete") ?
                                         (object)new { disabled = "disabled", @class = "chosen-select form-control" } :
@@ -385,12 +390,20 @@
                                     @if (Model.Status != "Complete")
                                     {
                                         <div class="col-md-3">
-                                            <input type="button" Id="btnSaveDrafttactic" name="button" value="Draft" class="btn btn-primary col-sm-12" />
+                                            <input type="button" Id="btnSaveDrafttactic" name="button" value="Draft" class="btn btn-primary col-sm-12"/>
                                         </div>
                                         <div class="col-md-3">
-                                            <input type="button" Id="btnSubmitTactic" name="button" value="Submit" class="btn btn-primary col-sm-12" />
+                                            <input type="button" Id="btnSubmitTactic" name="button" value="Submit" class="btn btn-primary col-sm-12"/>
                                         </div>
                                     }
+                                    else
+                                    {
+                                        <div class="col-md-3">
+                                            <input type="button" Id="btnSubmitTactic" name="button" value="Update" class="btn btn-primary col-sm-12" />
+                                        </div>
+                                    }
+                                   
+                                   
                                 </div>
                             </div>
                         </div>
