enhancement for date and edit fields

--- a/MRM/Content/Site.css
+++ b/MRM/Content/Site.css
@@ -143,3 +143,9 @@ a {
     margin-left: 32px;
     height: 32px;
 	}
+.benchmarkcurrency {
+    width: 85%;
+    margin-top: -15%;
+    margin-left: 32px;
+    height: 34px;
+}
