--- a/MRM/Views/TacticCampaign/TacticCampaignForm.cshtml
+++ b/MRM/Views/TacticCampaign/TacticCampaignForm.cshtml
@@ -12,6 +12,14 @@
     @Html.HiddenFor(m => m.GeoSelectUnselect, new { @Value = Model.GeoSelectUnselect })
     @Html.HiddenFor(m => m.IndustrySelectUnselect, new { @Value = Model.IndustrySelectUnselect })
     @Html.HiddenFor(m => m.SubCampaignType, new { @Value = Model.SubCampaignType })
+    @if (Model.Status == "Complete")
+    {
+        @Html.HiddenFor(m => m.MasterCampaign_Id, new { @Value = Model.MasterCampaign_Id })
+        @Html.HiddenFor(m => m.ChildCampaign_Id, new { @Value = Model.ChildCampaign_Id })
+        @Html.HiddenFor(m => m.JournetStage_Id, new { @Value = Model.JournetStage_Id })
+        @Html.HiddenFor(m => m.Name, new { @Value = Model.Name })
+        @Html.HiddenFor(m => m.TacticType, new { @Value = Model.TacticType })
+    }
     <section class="content-header"></section>
     <section class="content">
         <!-- SELECT2 EXAMPLE -->
@@ -111,8 +119,9 @@
                             <div class="col-md-6">
                                 <div class="form-group">
                                     <label>Markets</label><span class="text-danger"></span><br />
-                                    @Html.ListBoxFor(m => m.Geographys_Id, new MultiSelectList(Model.GeographyViewModels, "Id", "Name", Model.Geographys_Id), (Model.Id != 0 && Model.Status == "Complete") ?
-                                        (object)new { disabled = "disabled", @class = "chosen-select form-control" } :
+                                    @Html.ListBoxFor(m => m.Geographys_Id, new MultiSelectList(Model.GeographyViewModels, "Id", "Name", Model.Geographys_Id),
+                                        //(Model.Id != 0 && Model.Status == "Complete") ?
+                                        //    (object)new { disabled = "disabled", @class = "chosen-select form-control" } :
                                         (object)new { @class = "chosen-select form-control", onchange = "DDLSelectUnselect(this)" })
                                     @*<a data-next-stage="select" data-target-id="Geographys_Id" data-select-all="selectunselect" href="javascript:void(0);">Select All</a>*@
                                     <a data-next-stage="@(Model.GeoSelectUnselect==false?"select":"unselect")" data-target-id="Geographys_Id" data-select-all="selectunselect" href="javascript:void(0);"> @(Model.GeoSelectUnselect == false ? "Select All" : "Select None")</a>
