--- a/MRM/Views/ChildCampaign/ChildCampaignForm.cshtml
+++ b/MRM/Views/ChildCampaign/ChildCampaignForm.cshtml
@@ -241,6 +241,7 @@
                                             <td><label>Goal</label></td>
                                             <td><label>Low</label></td>
                                             <td><label>High</label></td>
+                                            <td><label>Source</label></td>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -253,10 +254,18 @@
                                                     (object)new { @class = "form-control", @maxlength = "50", onkeypress = "numericvalidate(event)", @placeholder = "Number of leads" })</td>
                                             <td>@Html.TextBoxFor(m => m.MILLow, (Model.Id != 0 && Model.Status == "Complete") ?
                                                     (object)new { disabled = "disabled", @class = "form-control", @maxlength = "50" } :
-                                                    (object)new { @class = "form-control", @maxlength = "50", onkeypress = "numericvalidate(event)", @placeholder = "Number of leads" })</td>
+                                                    (object)new { @class = "form-control", @maxlength = "50", onkeypress = "numericvalidate(event)", onchange = "LowHighOnChange()" })</td>
                                             <td>@Html.TextBoxFor(m => m.MILHigh, (Model.Id != 0 && Model.Status == "Complete") ?
                                                     (object)new { disabled = "disabled", @class = "form-control", @maxlength = "50" } :
-                                                    (object)new { @class = "form-control", @maxlength = "50", onkeypress = "numericvalidate(event)", @placeholder = "Number of leads" })</td>
+                                                    (object)new { @class = "form-control", @maxlength = "50", onkeypress = "numericvalidate(event)", onchange = "LowHighOnChange()" })
+                                                <div class="validmsgMIL"></div>
+                                            </td>
+                                                   
+                                             <td>
+                                                @Html.TextBoxFor(m => m.MILSource, (Model.Id != 0 && Model.Status == "Complete") ?
+                                                    (object)new { disabled = "disabled", @class = "form-control", @maxlength = "30" } :
+                                                    (object)new { @class = "form-control", @maxlength = "30",onkeypress = "return alpha(event,MILSource)" })
+                                           </td>
                                         </tr>
                                         <tr>
                                             <td><label>MGL</label></td>
@@ -266,11 +275,18 @@
                                                     (object)new { @class = "form-control", @maxlength = "50", onkeypress = "numericvalidate(event)", @placeholder = "Number of leads" })</td>
                                             <td>@Html.TextBoxFor(m => m.MGLLow, (Model.Id != 0 && Model.Status == "Complete") ?
                                                     (object)new { disabled = "disabled", @class = "form-control", @maxlength = "50" } :
-                                                    (object)new { @class = "form-control", @maxlength = "50", onkeypress = "numericvalidate(event)", @placeholder = "Number of leads" }) </td>
+                                                    (object)new { @class = "form-control", @maxlength = "50", onkeypress = "numericvalidate(event)" , onchange = "LowHighOnChange()" }) </td>
                                             <td>@Html.TextBoxFor(m => m.MGLHigh, (Model.Id != 0 && Model.Status == "Complete") ?
                                                     (object)new { disabled = "disabled", @class = "form-control", @maxlength = "50" } :
-                                                    (object)new { @class = "form-control", @maxlength = "50", onkeypress = "numericvalidate(event)", @placeholder = "Number of leads" })</td>
-                                        </tr>
+                                                    (object)new { @class = "form-control", @maxlength = "50", onkeypress = "numericvalidate(event)", onchange = "LowHighOnChange()" })
+                                                <div class="validmsgMGL"></div>
+                                            </td>
+                                            <td>
+                                                @Html.TextBoxFor(m => m.MGLSource, (Model.Id != 0 && Model.Status == "Complete") ?
+                                                    (object)new { disabled = "disabled", @class = "form-control", @maxlength = "30" } :
+                                                    (object)new { @class = "form-control", @maxlength = "30", onkeypress = "return alpha(event,MGLSource)" })
+                                            </td>
+                                          </tr>
                                         <tr>
                                             <td><label>MIO</label></td>
                                             <td><span class="input-group-addon" style="width: 0px;height: 33px !important;">€</span>
@@ -281,12 +297,18 @@
                                             <td><span class="input-group-addon" style="width: 0px;height: 33px !important;">€</span>
                                                 @Html.TextBoxFor(m => m.MIOLow, (Model.Id != 0 && Model.Status == "Complete") ?
                                                          (object) new {disabled = "disabled", @class = "form-control benchmarkcurrency", @maxlength = "50"} :
-                                                         (object) new {@class = "form-control benchmarkcurrency", @maxlength = "50", onkeypress = "numericvalidate(event)"})
+                                                         (object) new {@class = "form-control benchmarkcurrency", @maxlength = "50", onkeypress = "numericvalidate(event)", onchange = "LowHighOnChange()" })
                                             </td>
                                             <td><span class="input-group-addon" style="width: 0px;height: 33px !important;">€</span>
                                                 @Html.TextBoxFor(m => m.MIOHigh, (Model.Id != 0 && Model.Status == "Complete") ?
-                                                         (object) new {disabled = "disabled", @class = "form-control benchmarkcurrency", @maxlength = "50"} :
-                                                         (object) new {@class = "form-control benchmarkcurrency", @maxlength = "50", onkeypress = "numericvalidate(event)"})
+                                                    (object) new {disabled = "disabled", @class = "form-control benchmarkcurrency", @maxlength = "50"} :
+                                                    (object) new {@class = "form-control benchmarkcurrency", @maxlength = "50", onkeypress = "numericvalidate(event)", onchange = "LowHighOnChange()" })
+                                                <div class="validmsgMIO"></div>
+                                            </td>
+                                            <td>
+                                                @Html.TextBoxFor(m => m.MIOSource, (Model.Id != 0 && Model.Status == "Complete") ?
+                                                    (object)new { disabled = "disabled", @class = "form-control", @maxlength = "30" } :
+                                                    (object)new { @class = "form-control", @maxlength = "30", onkeypress = "return alpha(event,MIOSource)" })
                                             </td>
                                         </tr>
                                         <tr>
@@ -299,12 +321,23 @@
                                             <td><span class="input-group-addon" style="width: 0px;height: 33px !important;">€</span>
                                                 @Html.TextBoxFor(m => m.MGOLow, (Model.Id != 0 && Model.Status == "Complete") ?
                                                          (object) new {disabled = "disabled", @class = "form-control benchmarkcurrency", @maxlength = "50"} :
-                                                         (object) new {@class = "form-control benchmarkcurrency", @maxlength = "50", onkeypress = "numericvalidate(event)"})
+                                                         (object) new {@class = "form-control benchmarkcurrency", @maxlength = "50", onkeypress = "numericvalidate(event)",onchange= "LowHighOnChange()" })
                                             </td>
                                             <td><span class="input-group-addon" style="width: 0px;height: 33px !important;">€</span>
                                                 @Html.TextBoxFor(m => m.MGOHigh, (Model.Id != 0 && Model.Status == "Complete") ?
-                                                         (object) new {disabled = "disabled", @class = "form-control benchmarkcurrency", @maxlength = "50"} :
-                                                         (object) new {@class = "form-control benchmarkcurrency", @maxlength = "50", onkeypress = "numericvalidate(event)"})
+                                                    (object) new {disabled = "disabled", @class = "form-control benchmarkcurrency", @maxlength = "50"} :
+                                                    (object) new {@class = "form-control benchmarkcurrency", @maxlength = "50", onkeypress = "numericvalidate(event)", onchange = "LowHighOnChange()" })
+                                               
+                                             </td>
+                                            <td>
+                                                @Html.TextBoxFor(m => m.MGOSource, (Model.Id != 0 && Model.Status == "Complete") ?
+                                                    (object)new { disabled = "disabled", @class = "form-control", @maxlength = "30" } :
+                                                    (object)new { @class = "form-control", @maxlength = "30", onkeypress = "return alpha(event,MGOSource)" })
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td colspan="5" align="center">
+                                                <div class="validmsgHighLowCompare"></div>
                                             </td>
                                         </tr>
                                     </tbody>
