--- a/MRM/Content/Site.css
+++ b/MRM/Content/Site.css
@@ -149,3 +149,12 @@ a {
     margin-left: 32px;
     height: 34px;
 }
+
+.DateReadOnly {
+    /*pointer-events:none;*/
+    background-color:#FFF!important;
+}
+.DateReadOnly:hover
+{
+   cursor: text;
+}
