--- a/MRM/Views/ChildCampaign/ChildCampaignForm.cshtml
+++ b/MRM/Views/ChildCampaign/ChildCampaignForm.cshtml
@@ -103,7 +103,7 @@
                                         @Html.TextBoxFor(m => m.StartDate,
                                             //(Model.Id != 0 && Model.Status == "Complete") ?
                                             //     (object)new { Value = (Model.StartDate != null ? Model.StartDate.Value.ToString("dd MMM yyyy") : ""), disabled = "disabled", @class = "form-control start-date-cal", @maxlength = "10", @placeholder = "DD Month YYYY" } :
-                                            (object)new { Value = (Model.StartDate != null ? Model.StartDate.Value.ToString("dd MMM yyyy") : ""), @class = "form-control start-date-cal", @maxlength = "10", @placeholder = "DD Month YYYY" })
+                                            (object)new { Value = (Model.StartDate != null ? Model.StartDate.Value.ToString("dd MMM yyyy") : ""), @class = "form-control start-date-cal DateReadOnly", @maxlength = "10", @placeholder = "DD Month YYYY", @readonly = "readonly" })
                                         <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar add-on startcal"></span></span>
                                     </div>
                                     <div class="validmsgSdate HideOnsave"></div>
@@ -120,7 +120,7 @@
                                         @Html.TextBoxFor(m => m.EndDate,
                                             //(Model.Id != 0 && Model.Status == "Complete") ?
                                             //     (object)new { Value = (Model.EndDate != null ? Model.EndDate.Value.ToString("dd MMM yyyy") : ""), disabled = "disabled", @class = "form-control end-date-cal", @maxlength = "10", @placeholder = "DD Month YYYY" } :
-                                            (object)new { Value = (Model.EndDate != null ? Model.EndDate.Value.ToString("dd MMM yyyy") : ""), @class = "form-control end-date-cal", @maxlength = "10", @placeholder = "DD Month YYYY" })
+                                            (object)new { Value = (Model.EndDate != null ? Model.EndDate.Value.ToString("dd MMM yyyy") : ""), @class = "form-control end-date-cal DateReadOnly", @maxlength = "10", @placeholder = "DD Month YYYY", @readonly = "readonly" })
                                         <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar add-on endcal"></span></span>
                                     </div>
                                     <div class="validmsgEdate HideOnsave"></div><div class="validmsgDatecompare"></div>
@@ -251,13 +251,13 @@
                                             <td>
                                             @Html.TextBoxFor(m => m.MILGoal, (Model.Id != 0 && Model.Status == "Complete") ?
                                                     (object)new { disabled = "disabled", @class = "form-control", @maxlength = "50" } :
-                                                    (object)new { @class = "form-control", @maxlength = "50", onkeypress = "numericvalidate(event)", @placeholder = "Number of leads" })</td>
+                                                    (object)new { @class = "form-control", @maxlength = "50", onkeypress = "ConfigurationModel.numericvalidate(event)", @placeholder = "Number of leads" })</td>
                                             <td>@Html.TextBoxFor(m => m.MILLow, (Model.Id != 0 && Model.Status == "Complete") ?
                                                     (object)new { disabled = "disabled", @class = "form-control", @maxlength = "50" } :
-                                                    (object)new { @class = "form-control", @maxlength = "50", onkeypress = "numericvalidate(event)", onchange = "LowHighOnChange()" })</td>
+                                                    (object)new { @class = "form-control", @maxlength = "50", onkeypress = "ConfigurationModel.numericvalidate(event)", onchange = "LowHighOnChange()" })</td>
                                             <td>@Html.TextBoxFor(m => m.MILHigh, (Model.Id != 0 && Model.Status == "Complete") ?
                                                     (object)new { disabled = "disabled", @class = "form-control", @maxlength = "50" } :
-                                                    (object)new { @class = "form-control", @maxlength = "50", onkeypress = "numericvalidate(event)", onchange = "LowHighOnChange()" })
+                                                    (object)new { @class = "form-control", @maxlength = "50", onkeypress = "ConfigurationModel.numericvalidate(event)", onchange = "LowHighOnChange()" })
                                                 <div class="validmsgMIL"></div>
                                             </td>
                                                    
@@ -272,13 +272,13 @@
                                             <td>
                                             @Html.TextBoxFor(m => m.MGLGoal, (Model.Id != 0 && Model.Status == "Complete") ?
                                                     (object)new { disabled = "disabled", @class = "form-control", @maxlength = "50" } :
-                                                    (object)new { @class = "form-control", @maxlength = "50", onkeypress = "numericvalidate(event)", @placeholder = "Number of leads" })</td>
+                                                    (object)new { @class = "form-control", @maxlength = "50", onkeypress = "ConfigurationModel.numericvalidate(event)", @placeholder = "Number of leads" })</td>
                                             <td>@Html.TextBoxFor(m => m.MGLLow, (Model.Id != 0 && Model.Status == "Complete") ?
                                                     (object)new { disabled = "disabled", @class = "form-control", @maxlength = "50" } :
-                                                    (object)new { @class = "form-control", @maxlength = "50", onkeypress = "numericvalidate(event)" , onchange = "LowHighOnChange()" }) </td>
+                                                    (object)new { @class = "form-control", @maxlength = "50", onkeypress = "ConfigurationModel.numericvalidate(event)", onchange = "LowHighOnChange()" }) </td>
                                             <td>@Html.TextBoxFor(m => m.MGLHigh, (Model.Id != 0 && Model.Status == "Complete") ?
                                                     (object)new { disabled = "disabled", @class = "form-control", @maxlength = "50" } :
-                                                    (object)new { @class = "form-control", @maxlength = "50", onkeypress = "numericvalidate(event)", onchange = "LowHighOnChange()" })
+                                                    (object)new { @class = "form-control", @maxlength = "50", onkeypress = "ConfigurationModel.numericvalidate(event)", onchange = "LowHighOnChange()" })
                                                 <div class="validmsgMGL"></div>
                                             </td>
                                             <td>
@@ -292,17 +292,17 @@
                                             <td><span class="input-group-addon" style="width: 0px;height: 33px !important;">€</span>
                                                 @Html.TextBoxFor(m => m.MIOGoal, (Model.Id != 0 && Model.Status == "Complete") ?
                                                          (object) new {disabled = "disabled", @class = "form-control benchmarkcurrency", @maxlength = "50"} :
-                                                         (object) new {@class = "form-control benchmarkcurrency", @maxlength = "50", onkeypress = "numericvalidate(event)"})
+                                                         (object) new {@class = "form-control benchmarkcurrency", @maxlength = "50", onkeypress = "ConfigurationModel.numericvalidate(event)" })
                                             </td>
                                             <td><span class="input-group-addon" style="width: 0px;height: 33px !important;">€</span>
                                                 @Html.TextBoxFor(m => m.MIOLow, (Model.Id != 0 && Model.Status == "Complete") ?
                                                          (object) new {disabled = "disabled", @class = "form-control benchmarkcurrency", @maxlength = "50"} :
-                                                         (object) new {@class = "form-control benchmarkcurrency", @maxlength = "50", onkeypress = "numericvalidate(event)", onchange = "LowHighOnChange()" })
+                                                         (object) new {@class = "form-control benchmarkcurrency", @maxlength = "50", onkeypress = "ConfigurationModel.numericvalidate(event)", onchange = "LowHighOnChange()" })
                                             </td>
                                             <td><span class="input-group-addon" style="width: 0px;height: 33px !important;">€</span>
                                                 @Html.TextBoxFor(m => m.MIOHigh, (Model.Id != 0 && Model.Status == "Complete") ?
                                                     (object) new {disabled = "disabled", @class = "form-control benchmarkcurrency", @maxlength = "50"} :
-                                                    (object) new {@class = "form-control benchmarkcurrency", @maxlength = "50", onkeypress = "numericvalidate(event)", onchange = "LowHighOnChange()" })
+                                                    (object) new {@class = "form-control benchmarkcurrency", @maxlength = "50", onkeypress = "ConfigurationModel.numericvalidate(event)", onchange = "LowHighOnChange()" })
                                                 <div class="validmsgMIO"></div>
                                             </td>
                                             <td>
@@ -316,17 +316,17 @@
                                             <td><span class="input-group-addon" style="width: 0px;height: 33px !important;">€</span>
                                                 @Html.TextBoxFor(m => m.MGOGoal, (Model.Id != 0 && Model.Status == "Complete") ?
                                                          (object) new {disabled = "disabled", @class = "form-control benchmarkcurrency", @maxlength = "50"} :
-                                                         (object) new {@class = "form-control benchmarkcurrency", @maxlength = "50", onkeypress = "numericvalidate(event)"})
+                                                         (object) new {@class = "form-control benchmarkcurrency", @maxlength = "50", onkeypress = "ConfigurationModel.numericvalidate(event)" })
                                             </td>
                                             <td><span class="input-group-addon" style="width: 0px;height: 33px !important;">€</span>
                                                 @Html.TextBoxFor(m => m.MGOLow, (Model.Id != 0 && Model.Status == "Complete") ?
                                                          (object) new {disabled = "disabled", @class = "form-control benchmarkcurrency", @maxlength = "50"} :
-                                                         (object) new {@class = "form-control benchmarkcurrency", @maxlength = "50", onkeypress = "numericvalidate(event)",onchange= "LowHighOnChange()" })
+                                                         (object) new {@class = "form-control benchmarkcurrency", @maxlength = "50", onkeypress = "ConfigurationModel.numericvalidate(event)", onchange= "LowHighOnChange()" })
                                             </td>
                                             <td><span class="input-group-addon" style="width: 0px;height: 33px !important;">€</span>
                                                 @Html.TextBoxFor(m => m.MGOHigh, (Model.Id != 0 && Model.Status == "Complete") ?
                                                     (object) new {disabled = "disabled", @class = "form-control benchmarkcurrency", @maxlength = "50"} :
-                                                    (object) new {@class = "form-control benchmarkcurrency", @maxlength = "50", onkeypress = "numericvalidate(event)", onchange = "LowHighOnChange()" })
+                                                    (object) new {@class = "form-control benchmarkcurrency", @maxlength = "50", onkeypress = "ConfigurationModel.numericvalidate(event)", onchange = "LowHighOnChange()" })
                                                
                                              </td>
                                             <td>
