enhancement and bug fixed

--- a/MRM/Views/MasterCampaign/MasterCampaignForm.cshtml
+++ b/MRM/Views/MasterCampaign/MasterCampaignForm.cshtml
@@ -213,7 +213,7 @@
                             @if (Model.Status != "Complete")
                             {
                                 <div class="col-md-3">
-                                    <input type="button" Id="btnSaveDraft" name="button" value="Draft" class="btn btn-primary col-sm-12"/>
+                                    <input type="button" Id="btnSaveDraft" name="button" value="Save Draft" class="btn btn-primary col-sm-12"/>
                                 </div>
                                 <div class="col-md-3">
                                     <input type="button" Id="btnSubmit" name="button" value="Submit" class="btn btn-primary col-sm-12" />
