--- a/MRM/Views/TacticCampaign/tacticdigital.cshtml
+++ b/MRM/Views/TacticCampaign/tacticdigital.cshtml
@@ -85,7 +85,7 @@
                         <div class="row">
                             <div class="col-md-10"></div>
                             <div class="col-md-2">
-                                <input type="button" class="btn btn-primary" value="Add" />
+                                <input type="button" class="btn btn-primary" disabled="disabled" value="Add" />
                             </div>
                         </div>
 
@@ -133,9 +133,9 @@
         </div>
         <div class="modal-footer">
             <div>
-                <input type="button" class="btn btn-danger" value="Delete" />
-                <input type="button" class="btn btn-primary" value="Save Draft" />
-                <input type="submit" class="btn btn-info" value="Submit & Export" />
+                <input type="button" disabled="disabled" class="btn btn-danger" value="Delete" />
+                <input type="button" disabled="disabled" class="btn btn-primary" value="Save Draft" />
+                <input type="submit" disabled="disabled" class="btn btn-info" value="Submit & Export" />
                 <button id="btnclose" type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
             </div>
         </div>
