--- a/MRM/Views/Shared/_Layout.cshtml
+++ b/MRM/Views/Shared/_Layout.cshtml
@@ -72,6 +72,9 @@
         BindDatePickerCalender();
         DatePickeronCalIcon();
         $('.numeric').autoNumeric('init');
+        $('.onlynumeric').autoNumeric('init', { mDec: 0 }); 
+ 
+
     });
 
     var customCode = function () {
@@ -92,10 +95,13 @@
         $("#IdLoadView").removeClass("OnLoaderscroll");
         GetBGandSegmentSingleDDl();
         GetSubCampaignType();
+
+        MasterChildNotSelected();
     };
 
     $(document).ready(function () {
         $('.numeric').autoNumeric('init');
+        $('.onlynumeric').autoNumeric('init', { mDec: 0 });
         //$.fn.ajaxMRM = function (options) {
         //    var settingsmrm = $.extend(true, {}, options,{
         //        success: function (data) {
@@ -107,9 +113,12 @@
         //    $.ajax(settingsmrm);
         //};
         //  $(".chosen-single").data("placeholder", "None selected.").chosen();
+
+       
+       
         
         $(document).on('focus', '#BusinessLines_Id_chosen', function () {
-            if ($('#BusinessGroups_Id').val() == null || $('#BusinessGroups_Id').val() == "-1") {
+            if ($('#BusinessGroups_Id').val() == null || $('#BusinessGroups_Id').val() == "-1" || $('#BusinessGroups_Id').val() == "0") {
                 $('.validmsgbusinesLine').text("Please select Business group first").css("color", "#b94a48");
                 $('.validmsgbusinesLine').show();
                 $('#BusinessLines_Id').text('');
@@ -122,7 +131,7 @@
         });
 
         $(document).on('focus', '#Industries_Id_chosen', function () {
-            if ($('#Segments_Id').val() == null || $('#Segments_Id').val() == "-1") {
+            if ($('#Segments_Id').val() == null || $('#Segments_Id').val() == "-1" || $('#Segments_Id').val() == "0") {
                 $('.validmsgbusinesIndustry').text("Please select Segment first").css("color", "#b94a48");
                 $('.validmsgbusinesIndustry').show();
                 $('#Industries_Id').text('');
@@ -133,6 +142,19 @@
             }
 
         });
+
+
+        $(".tab-content").find("input, textarea, select")
+
+        //////////////////
+        $(document).on('focus', '.ChkCampselection', function () {
+            ChkCampselection();
+        });
+
+        $(document).on('focus', '.chosen-choices', function () {
+            ChkCampselection();
+        });
+        //////////////////////
 
         $(document).on('change', '.start-date-cal', function () {
             if ($(".start-date-cal").val() == '') {
@@ -155,6 +177,7 @@
 
         BindDatePickerCalender();
 
+        MasterChildNotSelected();
     });
 
     function BindDatePickerCalender() {     
@@ -341,6 +364,59 @@
         });
     }
 
+    function ChkCampselection() {
+        var pathname = window.location.pathname; // Returns path only
+        var MID = null;
+        if (pathname.indexOf("ChildCampaign") > 0) {
+            MID = "#MasterCampaignId";
+        } else { MID = "#MasterCampaign_Id"; }
+        if ($(MID).val() == "") {
+            if ($(MID).val() == "") {
+                $('.validmsgMastercampaign').text("Please select Master Campaign first").css("color", "#b94a48");
+                $('.validmsgMastercampaign').show();
+                $("html, body").animate({ scrollTop: 0 }, 600);
+                return false;
+            } else {
+                $('.validmsgMastercampaign').hide();
+            }
+        }
+        else if ($("#ChildCampaign_Id").val() == "") {
+            if ($("#ChildCampaign_Id").val() == "") {
+                $('.validmsgSubcampaign').text("Please select Child Campaign first").css("color", "#b94a48");
+                $('.validmsgSubcampaign').show();
+                $("html, body").animate({ scrollTop: 0 }, 600);
+                return false;
+            } else {
+                $('.validmsgSubcampaign').hide();
+            }
+        }
+    }
+
+
+    //When master or child not slected to fill form
+ function MasterChildNotSelected()
+    {
+        var Path = window.location.pathname; // Returns path only
+        if (Path.indexOf("ChildCampaign") > 0) {
+            if ($("#MasterCampaignId").val() == "") {
+                $('a[data-select-all="selectunselect"]').hide();
+                $('a[data-target-id="BusinessGroups_Id"]').hide();
+                $('a[data-target-id="Segments_Id"]').hide();
+            }
+        }
+        else if (Path.indexOf("TacticCampaign") > 0) {
+            if ($("#MasterCampaign_Id").val() == "") {
+                $('a[data-select-all="selectunselect"]').hide();
+                $('a[data-target-id="BusinessGroups_Id"]').hide();
+                $('a[data-target-id="Segments_Id"]').hide();
+            }
+            else if ($("#ChildCampaign_Id").val() == "") {
+                $('a[data-select-all="selectunselect"]').hide();
+                $('a[data-target-id="BusinessGroups_Id"]').hide();
+                $('a[data-target-id="Segments_Id"]').hide();
+            }
+        }
+    }
 </script>
 
 <script src="~/Content/Multi-Select/chosen.jquery.js" type="text/javascript"></script>
@@ -450,5 +526,7 @@
     .OnLoaderscroll {
     overflow-y:hidden!important;
     }
+
+   
 
 </style>
