--- a/MRM/Views/TacticCampaign/TacticCampaignForm.cshtml
+++ b/MRM/Views/TacticCampaign/TacticCampaignForm.cshtml
@@ -54,7 +54,7 @@
                                     Model.ChildCampaign_Id), "None selected.",
                                     Model.Id != 0 && Model.Status == "Complete" ?
                                     (object)new { disabled = "disabled", @class = "chosen-single form-control" } :
-                                    (object)new { @class = "chosen-single form-control", onchange= "ChkCampselection()" })
+                                    (object)new { @class = "chosen-single form-control" })
                                     <div class="validmsgSubcampaign"></div>
                                 </div>
                             </div>
@@ -108,7 +108,7 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <label>Theme</label>  <br />
+                                    <label>Used Case</label>  <br />
                                     @Html.ListBoxFor(m => m.Themes_Id, new MultiSelectList(Model.ThemeViewModels, "Id", "Name", Model.Themes_Id),
                                         //(Model.Id != 0 && Model.Status == "Complete") ?
                                         //    (object)new { disabled = "disabled", @class = "chosen-select form-control" } :
@@ -133,7 +133,7 @@
                         <div class="row">
 
                             <div class="col-md-6" id="SD">
-                                <label>Start Date<span class="text-danger lb-sm"> (DD 3letter month YYYY)*</span></label>
+                                <label>Start Date<span class="text-danger lb-sm">*</span></label>
                                 <div class="form-group">
                                     <div id="dvStartDate" class="col-md-6 date datealign">
                                         <div class="input-group input-append date">
@@ -149,7 +149,7 @@
                                 </div>
                             </div>
                             <div class="col-md-6" id="ED">
-                                <label>End Date<span class="text-danger lb-sm"> (DD 3letter month YYYY)*</span></label>
+                                <label>End Date<span class="text-danger lb-sm">*</span></label>
                                 <div class="form-group">
                                     <div id="dvEndDate" class="col-md-6 form-group date datealign">
                                         <div class="input-group input-append date">
