--- a/MRM/Views/Shared/_Layout.cshtml
+++ b/MRM/Views/Shared/_Layout.cshtml
@@ -370,12 +370,14 @@
 
     function ChkCampselection() {
         var pathname = window.location.pathname; // Returns path only
-        var MID = null;
-        if (pathname.indexOf("ChildCampaign") > 0) {
-            MID = "#MasterCampaignId";
-        } else { MID = "#MasterCampaign_Id"; }
-        if ($(MID).val() == "") {
-            if ($(MID).val() == "") {
+        //var MID = null;
+        //if (pathname.indexOf("ChildCampaign") > 0) {
+        //    MID = "#MasterCampaignId";
+        //} else { MID = "#MasterCampaign_Id"; }
+
+        if (pathname.indexOf("ChildCampaign") > 0)
+        {
+            if ($("#MasterCampaignId").val() == "" || $("#MasterCampaignId").val() == "0") {
                 $('.validmsgMastercampaign').text("Please select Master Campaign first").css("color", "#b94a48");
                 $('.validmsgMastercampaign').show();
                 $("html, body").animate({ scrollTop: 0 }, 600);
@@ -384,43 +386,46 @@
                 $('.validmsgMastercampaign').hide();
             }
         }
-        else if ($("#ChildCampaign_Id").val() == "") {
-            if ($("#ChildCampaign_Id").val() == "") {
-                $('.validmsgSubcampaign').text("Please select Child Campaign first").css("color", "#b94a48");
-                $('.validmsgSubcampaign').show();
-                $("html, body").animate({ scrollTop: 0 }, 600);
-                return false;
-            } else {
-                $('.validmsgSubcampaign').hide();
-            }
+
+        if (pathname.indexOf("TacticCampaign") > 0)
+        {
+                if ($("#ChildCampaign_Id").val() == "" || $("#ChildCampaign_Id").val() == "0") {
+                    $('.validmsgSubcampaign').text("Please select Sub Campaign first").css("color", "#b94a48");
+                    $('.validmsgSubcampaign').show();
+                    $("html, body").animate({ scrollTop: 0 }, 600);
+                    return false;
+                } else {
+                    $('.validmsgSubcampaign').hide();
+                }
         }
     }
 
-
+  
     //When master or child not slected to fill form
  function MasterChildNotSelected()
     {
         var Path = window.location.pathname; // Returns path only
         if (Path.indexOf("ChildCampaign") > 0) {
-            if ($("#MasterCampaignId").val() == "") {
+            if ($("#MasterCampaignId").val() == "" || $("#MasterCampaignId").val() == "0") {
                 $('a[data-select-all="selectunselect"]').hide();
                 $('a[data-target-id="BusinessGroups_Id"]').hide();
                 $('a[data-target-id="Segments_Id"]').hide();
             }
         }
         else if (Path.indexOf("TacticCampaign") > 0) {
-            if ($("#MasterCampaign_Id").val() == "") {
+            if ($("#MasterCampaign_Id").val() == "" || $("#MasterCampaign_Id").val() == "0") {
                 $('a[data-select-all="selectunselect"]').hide();
                 $('a[data-target-id="BusinessGroups_Id"]').hide();
                 $('a[data-target-id="Segments_Id"]').hide();
             }
-            else if ($("#ChildCampaign_Id").val() == "") {
+            else if ($("#ChildCampaign_Id").val() == "" || $("#ChildCampaign_Id").val() == "0") {
                 $('a[data-select-all="selectunselect"]').hide();
                 $('a[data-target-id="BusinessGroups_Id"]').hide();
                 $('a[data-target-id="Segments_Id"]').hide();
             }
         }
-    }
+ }
+
 </script>
 
 <script src="~/Content/Multi-Select/chosen.jquery.js" type="text/javascript"></script>
