--- a/MRM/Views/TacticCampaign/tacticdigital.cshtml
+++ b/MRM/Views/TacticCampaign/tacticdigital.cshtml
@@ -44,10 +44,10 @@
                         <div class="row">
                             <div class="col-md-4">
                                 <div class="form-group">
-                                    <label>Souce</label>
+                                    <label>Source</label>
 
                                     <div class="form-group">
-                                        <input type="text" value="" class="form-control" placeholder="Souce" />
+                                        <input type="text" value="" class="form-control" placeholder="Source" />
                                     </div>
                                 </div>
                             </div>
