Renamed -spend ,budget with total as a prefix

--- a/MRM/Views/ChildCampaign/ChildCampaignForm.cshtml
+++ b/MRM/Views/ChildCampaign/ChildCampaignForm.cshtml
@@ -203,7 +203,7 @@
                                 <div class="row">
                                     <div class="col-md-6" id="Bud">
                                         <div class="form-group">
-                                            <label>Budget<span class="text-danger">*</span></label>
+                                            <label>Total Budget<span class="text-danger">*</span></label>
                                             <span class="input-group-addon" style="width: 0px;height: 31.5px !important;">€</span>
                                                  @Html.TextBoxFor(m => m.Budget,
                                                 //(Model.Id != 0 && Model.Status == "Complete") ?
@@ -215,7 +215,7 @@
                                     </div>
                                     <div class="col-md-6" id="SP">
                                         <div class="form-group">
-                                            <label>Spend</label><br />
+                                            <label>Total Spend</label><br />
                                             <span class="input-group-addon" style="width: 0px;height: 31.5px !important;">€</span>
                                             @Html.TextBoxFor(m => m.Spend,
                                                 //(Model.Id != 0 && Model.Status == "Complete") ?
