Digital Touch Point

--- a/MRM/Views/TacticCampaign/TacticCampaignForm.cshtml
+++ b/MRM/Views/TacticCampaign/TacticCampaignForm.cshtml
@@ -235,7 +235,7 @@
                             </div>
                             <div class="col-md-6">
                                 <label></label><br />
-                                <button id="btnDigital" data-target="#myModal" data-toggle="modal" type="button" class="btn btn-sm btn-info">Digital Touchpoint</button>
+                                <button id="btnDigital" onclick="ftacticData();" data-target="#myModal" data-toggle="modal" type="button" class="btn btn-sm btn-info">Digital Touchpoint</button>
 
                             </div>
                         </div>
